infra/k8s/comments-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
      - name: comments
        image: absternator/comments
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: comments-service
spec:
# clusterIp is default so dont have to put
  type: ClusterIP
  selector:
    app: comments
  ports: 
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
