infra/k8s/moderation-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moderation
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
      - name: moderation
        image: absternator/moderation
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: moderation-service
spec:
# clusterIp is default so dont have to put
  type: ClusterIP
  selector:
    app: moderation
  ports: 
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
