infra/k8s/posts-deploy.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: posts-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: absternator/posts
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-service
spec:
  selector:
    app: posts 
  ports:
  - port: 4000
    targetPort: 4000
