infra/k8s/query-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: absternator/query
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
---

apiVersion: v1
kind: Service
metadata:
  name: query-service
spec:
# clusterIp is default so dont have to put
  type: ClusterIP
  selector:
    app: query
  ports: 
    - name: query
      protocol: TCP
      port: 4002
      targetPort: 4002
